assets/style.css
/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */

img,legend {
  border: 0;
}

legend,td,th {
  padding: 0;
}

html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {
  display: block;
}

audio,canvas,progress,video {
  display: inline-block;
  vertical-align: baseline;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],template {
  display: none;
}

a {
  background-color: transparent;
}

a:active,a:hover {
  outline: 0;
}

abbr[title] {
  border-bottom: 1px dotted;
}

b,optgroup,strong {
  font-weight: 700;
}

dfn {
  font-style: italic;
}

h1 {
  font-size: 2em;
  margin: .67em 0;
}

mark {
  background: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub,sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -.5em;
}

sub {
  bottom: -.25em;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 1em 40px;
}

hr {
  box-sizing: content-box;
  height: 0;
}

pre,textarea {
  overflow: auto;
}

code,kbd,pre,samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

button,input,optgroup,select,textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}

button {
  overflow: visible;
}

button,select {
  text-transform: none;
}

button,html input[type=button],input[type=reset],input[type=submit] {
  -webkit-appearance: button;
  cursor: pointer;
}

button[disabled],html input[disabled] {
  cursor: default;
}

button::-moz-focus-inner,input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input {
  line-height: normal;
}

input[type=checkbox],input[type=radio] {
  box-sizing: border-box;
  padding: 0;
}

input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button {
  height: auto;
}

input[type=search] {
  -webkit-appearance: textfield;
  box-sizing: content-box;
}

input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
}

fieldset {
  border: 1px solid silver;
  margin: 0 2px;
  padding: .35em .625em .75em;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

@font-face {
  font-family: Halter;
  src: url(../assets/Halter.woff);
}

html {
  font-size: 16px;
  color: #666;
  font-family: 'Roboto Condensed', sans-serif;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  min-height: 100vh;
  min-width: 430px;
}

.heading {
  padding: 0 2rem 1rem;
  border-bottom: 2px solid #8A8A8A;
  margin: 3rem 1rem 1rem;
  font-weight: normal;
  font-size: 1.2rem;
  text-align: center;
}

.heading__descr {
  margin: 0;
}

.link {
  color: #4078C0;
  text-decoration: none;
  border-bottom: 2px solid transparent;
  transition: .2s border-color;
  line-height: 90%;
  display: inline-block;
}

.link:hover {
  border-color: currentColor;
  cursor: pointer;
}

.repo {
  font-size: 3.5rem;
  margin-bottom: .5rem;
  font-weight: bold;
  border-width: 4px;

}

.notice {
  margin: 2rem 0;
}

.card {
  border-radius: 15px;
  height: 240px;
  width: 388px;
  background: #E2E2E2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  box-sizing: border-box;
  box-shadow: 2px 2px 10px #999;
  transition: .6s background-color, .6s color;
  overflow: hidden;
}

.card__number {
  height: 36px;
  width: calc(100% - 2rem);
  margin-left: 1rem;
  box-sizing: border-box;
  font-size: 1.1rem;
  padding: .5rem 1rem;
  font-family: 'Halter';
  outline: none;
  background: rgba(255, 255,255, .2);
  border: none;
  border-radius: 5px;
  color: inherit;
}

.card__type,
  .card__bank-name {
  height: 4rem;
  line-height: 4rem;
  margin: 0;
  text-transform: uppercase;
  padding: 0 2rem;
  width: 100%;
  box-sizing: border-box;
  color: inherit;
}

.card__bank-name {
  text-align: left;
  padding-top: 1rem
}

.card__type {
  align-self: flex-end;
  text-align: right;
}

.hint {
  margin-top: 2rem;
  text-align: center;
  line-height: 1.5em;
}

.opacity-transition {
  opacity: 0;
  transition: .4s opacity;
}

.opacity-transition.visible {
  opacity: 1;
}

.card.is-be-amexbelgiumcorporate {
  background-color: #67b198;
  color: #fff;
}

.card.is-be-ingbelgium {
  background-color: #ff6600;
  color: #fff;
}

.card.is-by-absolutbank {
  background-color: #b72930;
  color: #fff;
}

.card.is-by-alfabank {
  background-color: #ee3124;
  color: #fff;
}

.card.is-by-belapb {
  background-color: #fab606;
  color: #000;
}

.card.is-by-belarusbank {
  background-color: #127d49;
  color: #fff;
}

.card.is-by-belaruskynarodny {
  background-color: #f89828;
  color: #fff;
}

.card.is-by-belgazprom {
  background-color: #0079c2;
  color: #fff;
}

.card.is-by-belinvestbank {
  background-color: #009881;
  color: #fff;
}

.card.is-by-belswissbank {
  background-color: #ee1d23;
  color: #fff;
}

.card.is-by-belveb {
  background-color: #f37637;
  color: #fff;
}

.card.is-by-bpssberbank {
  background-color: #1b991b;
  color: #fff;
}

.card.is-by-deltabank {
  background-color: #d81e05;
  color: #fff;
}

.card.is-by-homecredit {
  background-color: #e03a3e;
  color: #fff;
}

.card.is-by-moskvaminsk {
  background-color: #f2000d;
  color: #fff;
}

.card.is-by-mtb {
  background-color: #005aab;
  color: #fff;
}

.card.is-by-paritetbank {
  background-color: #0360a7;
  color: #fff;
}

.card.is-by-priorbank {
  background-color: #ffff00;
  color: #000;
}

.card.is-by-trustbank {
  background-color: #a81429;
  color: #fff;
}

.card.is-by-vtb {
  background-color: #002e77;
  color: #fff;
}

.card.is-kz-kazkom {
  background-color: #008fb4;
  color: #fff;
}

.card.is-ru-alfabank {
  background-color: #f22f17;
  color: #fff;
}

.card.is-ru-citibank {
  background-color: #0088cf;
  color: #fff;
}

.card.is-ru-gazprombank {
  background-color: #00448b;
  color: #fff;
}

.card.is-ru-mdm {
  background-color: #820729;
  color: #fff;
}

.card.is-ru-raiffeisen {
  background-color: #fff300;
  color: #000;
}

.card.is-ru-rocketbank {
  background-color: #fb8000;
  color: #fff;
}

.card.is-ru-sberbank {
  background-color: #309c0b;
  color: #fff;
}

.card.is-ru-siab {
  background-color: #0f255c;
  color: #fff;
}

.card.is-ru-tinkoff {
  background-color: #ffdd2d;
  color: #000;
}

.card.is-ru-vtb24 {
  background-color: #00498f;
  color: #fff;
}

.card.is-ru-yandex {
  background-color: #000000;
  color: #fff;
}

